# team3

lesson1/: multi_node.sh  答题卡.md
lesson10/: README.md  my.sh
lesson10/erc20/: lib.rs
lesson11/: Lesson11指令.md
lesson11/frontier/template/node/src/: chain_spec.rs
lesson12/: README.md
lesson2/: README.md
lesson2/substrate-node-template/pallets/poe/: Cargo.toml
lesson2/substrate-node-template/pallets/poe/src/: lib.rs  tests.rs
lesson2/substrate-node-template/runtime/src/: lib.rs
lesson3/: README.md
lesson3/substrate-front-end-template/src/: App.js  PoeModule.js
lesson3/substrate-node-template/pallets/poe/src/: lib.rs  mock.rs
lesson3/substrate-node-template/runtime/src/: lib.rs
lesson4/: README.md
lesson4/client/src/: script.js
lesson4/substrate-node-template/pallets/poe/src/: lib.rs  mock.rs  tests.rs
lesson4/substrate-node-template/runtime/src/: lib.rs
lesson5/: README.md
lesson5/pallets/kitties/src/: lib.rs
lesson6/: README.md
lesson6/pallets/kitties/src/: lib.rs
lesson7/: README.md
lesson7/substrate-kitties/pallets/kitties/src/: lib.rs  linked_item.rs
lesson8/: README.md
lesson8/substrate-node-template/node/src/: service.rs
lesson8/substrate-node-template/pallets/template/: Cargo.toml
lesson8/substrate-node-template/pallets/template/src/: lib.rs  mock.rs  tests.rs
lesson8/substrate-node-template/runtime/src/: lib.rs
lesson9/: README.md
lesson9/substrate-node-template/node/src/: service.rs
lesson9/substrate-node-template/pallets/template/: Cargo.toml
lesson9/substrate-node-template/pallets/template/src/: lib.rs
lesson9/substrate-node-template/runtime/src/: lib.rs
